--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /* scroll */
+
 *{
   margin: 0;
 }
@@ -11,10 +12,10 @@
   background: linear-gradient(rgb(215, 209, 209), rgb(51, 50, 50),#000,rgb(215, 209, 209));
 }
 /* scroll */
-
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
+  overflow-x: hidden;
 }
 
 a {
@@ -1106,3 +1107,13 @@ section {
     padding-right: 20px 15px;
   }
 }
+
+
+/* .certificat-hovered:hover{
+  position: absolute;
+  scale: 0.7;
+  right: auto;
+  left: auto;
+  height: auto;
+  width: auto;
+} */
